syntax = "proto3";

package video_service;

service VideoService {
    rpc CreateVideo(CreateVideoRequest) returns (Video);
    rpc UpdateVideoStatus(UpdateVideoStatusRequest) returns (Video);
    rpc FindVideoById(FindVideoByIdRequest) returns (Video);
    rpc GetAllVideo(GetAllVideoRequest) returns (GetAllVideoResponse);
    rpc GetAllChannelVideo(GetAllChannelVideoRequest) returns (GetAllChannelVideoResponse);
    rpc CreateComment(CreateCommentRequest) returns (Comment);
    rpc LikeVideo(LikeVideoRequest) returns (Like);
    rpc WatchVideo(WatchVideoRequest) returns (View);
    rpc CreatePlaylist(CreatePlaylistRequest) returns (Playlist);
    rpc AddVideoToPlaylist(AddVideoToPlaylistRequest) returns (PlaylistVideo);
    rpc FindPlaylistById(FindPlaylistByIdRequest) returns (Playlist);
}

message Video {
    string id = 1;
    string title = 2;
    string description = 3;
    string channelId = 4;
    string status = 5;
    string preview_url = 6;
    string videoUrl = 7;
    string createdAt = 8;
    string updatedAt = 9;
    repeated Comment comments = 10;
    repeated View views = 11;
    repeated Like likes = 12;
}

message Comment {
    string id = 1;
    string text = 2;
    string videoId = 3;
    string channelId = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message Like {
    string id = 1;
    string videoId = 3;
    string channelId = 4;
    string reactionType = 5;
    string createdAt = 6;
    string updatedAt = 7;
}

message View {
    string id = 1;
    string videoId = 3;
    string channelId = 4;
    string createdAt = 6;
    string updatedAt = 7;
}

message PlaylistVideo {
    string id = 1;
    string playlistId = 2;
    string videoId = 3;
    int32 position = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message Playlist {
    string id = 1;
    string text = 3;
    string channelId = 4;
    string createdAt = 6;
    string updatedAt = 7;
    repeated PlaylistVideo videos = 8;
}

message Boolean {
    bool bool = 1;
}

message CreateVideoRequest {
    string title = 1;
    string description = 2;
    string channelId = 3;
    string status = 4;
    string previewUrl = 5;
    string videoUrl = 6;
}

message GetAllVideoRequest {
    int32 page = 1;
    int32 pageSize = 2;
}

message GetAllVideoResponse {
    repeated Video videos = 1;
}

message GetAllChannelVideoRequest {
    string channelId = 1;
    int32 page = 2;
    int32 pageSize = 3;
}

message GetAllChannelVideoResponse {
    repeated Video videos = 1;
}

message UpdateVideoStatusRequest {
    string videoId = 1;
    string channelId = 2;
    string status = 3;
}

message CreateCommentRequest {
    string text = 1;
    string videoId = 2;
    string channelId = 3;
}

message LikeVideoRequest {
    string videoId = 1;
    string channelId = 2;
    string reaction = 3;
}

message WatchVideoRequest {
    string videoId = 1;
    string channelId = 2;
}

message CreatePlaylistRequest {
    string text = 1;
    string channelId = 2;
}

message AddVideoToPlaylistRequest {
    string playlistId = 1;
    string videoId = 2;
}

message FindVideoByIdRequest {
    string videoId = 1;
}

message FindPlaylistByIdRequest {
    string id = 1;
}